--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,6 +22,19 @@
     <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
   </div>
 
+  <%= fields_for( :tenant ) do |w| %>
+    <div class="form-group col-md-6 no-left-padding">
+      <%= w.label :name, 'Organization' %>
+      <span class='description'>(Unique name for your group or organization for the new account)</span>
+      <%= w.text_field :name, required: true, class: "form-control" %>
+    </div>
+    <div class="form-group col-md-6 no-right-padding">
+      <%= w.label :plan %>
+      <%= w.select :plan, options_for_select(Plan.options, params[:plan]), {}, required: true,
+                   class: "form-control" %>
+    </div>
+  <% end %>
+
   <div class="form-group">
     <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
   </div>
