--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,37 @@
-<h1><%= t('.resend_confirmation_instructions') %></h1>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= bootstrap_devise_error_messages! %>
-
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
+<%= bootstrap_devise_error_messages! %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4><%= t('.sign_up', :default => "Sign up") %></h4>
   </div>
-
-  <div class="form-group">
-    <%= f.submit t('.resend_confirmation_instructions'), class: 'btn btn-primary' %>
+  <div class="panel-body">
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),
+                 html: { role: "form" }) do |f| %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :password %><br />
+        <%= f.password_field :password, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+      </div>
+      <%= fields_for( :tenant ) do |w| %>
+        <div class="form-group col-md-6 no-left-padding">
+          <%= w.label :name, 'Organization' %>
+          <span class='description'>(Unique name for your group or organization for the new account)</span>
+          <%= w.text_field :name, required: true, class: "form-control" %>
+        </div>
+        <div class="form-group col-md-6 no-right-padding">
+          <%= w.label :plan %>
+          <%= w.select :plan, options_for_select(Plan.options, params[:plan]), {}, required: true,
+                       class: "form-control" %>
+        </div>
+      <% end %>
+      <%= f.submit t('.sign_up', :default => "Sign up"), class: "btn btn-primary" %>
+    <% end %>
   </div>
-<% end %>
-
-<%= render 'devise/shared/links' %>
+</div>
+<%= render "devise/shared/links" %>
