--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -112,6 +112,10 @@
   padding-right: 0 !important;
 }
 
+.form-horizontal .control-label {
+  text-align: left;
+}
+
 .table tr td {
   a.main-link {
     color: #428bca;
