--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <title><%= content_for?(:title) ? yield(:title) : "SaasProjectApp" %></title>
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= javascript_include_tag "https://js.stripe.com/v2/" %>
   <%= javascript_include_tag "application" %>
 </head>
 <body>
