--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,12 +16,14 @@
 </dl>
 <h3>Artifacts</h3>
 <%= render 'artifacts/list', artifacts: @project.artifacts %>
-<br />
-<br />
+<br/>
+<br/>
 
 <%= link_to '< Back to Organization Home', root_path, :class => 'btn btn-default' %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
             edit_tenant_project_path(project: @project, tenant: @project.tenant_id),
+            :class => 'btn btn-default' %>
+<%= link_to 'Edit Project Users', users_tenant_project_path(tenant_id: @project.tenant_id, id: @project.id),
             :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
             tenant_project_path(@project, @project.tenant_id),
